fix passphrase margin on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -524,7 +524,7 @@ footer a:hover {
 
     #passphraseOptions {
         width: 350px;
-        margin-top: 140px;
+        margin-top: 127px;
     }
 
     #checkbox-wrapper {
